--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
         android:id="@+id/preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        />
+        android:layout_centerInParent="false" />
     
     <ImageButton
         android:id="@+id/take_photo"
